--- a/.github/workflows/build-site.yml
+++ b/.github/workflows/build-site.yml
@@ -14,14 +14,15 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Install uv
-        uses: astral-sh/setup-uv@v4
+        uses: astral-sh/setup-uv@v7
         with:
           enable-cache: true
+          working-directory: web_source
 
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.10'
+      # - name: Set up Python
+      #   uses: actions/setup-python@v6
+      #   with:
+      #     python-version: '3.10'
 
       - name: Install dependencies
         run: uv sync
