add groupnames links

--- a/web_source/database/group/1,1.yaml
+++ b/web_source/database/group/1,1.yaml
@@ -1,5 +1,6 @@
 full_name: "Trivial Group"
 latex_name: "e"
+groupnames_link: "https://people.maths.bris.ac.uk/~matyd/GroupNames/1/C1.html"
 order: 1
 smallgroup_number: 1
 element_names: ['e']
